fixed phone contrast problem

--- a/style.css
+++ b/style.css
@@ -958,9 +958,6 @@ info-image-m {
 }
 
 @media only screen and (max-width: 425px) {
-
-
-
     #header {
         /*        border: 1px solid red;*/
         positioN: absolute;
@@ -1017,7 +1014,7 @@ info-image-m {
     }
 
     #popular-destinations-header {
-        margin-top: 150px;
+        margin-top: 280px;
     }
 
     #popular-destinations-header {
@@ -1134,6 +1131,7 @@ info-image-m {
         width: 100%;
         /*        border: 1px solid red;*/
         display: block;
+        color: white;
         /*        padding:10px 0px;*/
     }
 
